@@ -2,9 +2,9 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>no.ssb.dc</groupId>
+    <groupId>io.descoped.dc</groupId>
     <artifactId>data-collector-core</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Data Collector Core</name>
@@ -14,8 +14,8 @@
 
     <properties>
         <java.version>17</java.version>
-        <module.build.sourceEncoding>UTF-8</module.build.sourceEncoding>
-        <maven.javadoc.skip>true</maven.javadoc.skip>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <slf4j.version>2.0.16</slf4j.version>
         <logback.version>1.5.8</logback.version>
@@ -46,46 +46,51 @@
     <scm>
         <connection>scm:git:git://github.com/descoped/data-collector-core.git</connection>
         <developerConnection>scm:git:git@github.com:descoped/data-collector-core.git</developerConnection>
+        <url>https://github.com/descoped/data-collector-core/tree/master</url>
         <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
         <snapshotRepository>
             <id>ossrh</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
     </distributionManagement>
 
     <dependencies>
         <dependency>
-            <groupId>no.ssb.dc</groupId>
+            <groupId>io.descoped.dc</groupId>
             <artifactId>data-collector-api</artifactId>
-            <version>0.2-SNAPSHOT</version>
+            <version>2.0.2</version>
         </dependency>
 
         <dependency>
-            <groupId>no.ssb.dapla.secrets</groupId>
-            <artifactId>dapla-secrets-provider-safe-configuration</artifactId>
-            <version>0.6.1-SNAPSHOT</version>
+            <groupId>io.descoped.secrets</groupId>
+            <artifactId>secrets-provider-safe-configuration</artifactId>
+            <version>2.0.0</version>
         </dependency>
 
         <dependency>
-            <groupId>no.ssb.dapla.secrets</groupId>
-            <artifactId>dapla-secrets-provider-dynamic-configuration</artifactId>
-            <version>0.6.1-SNAPSHOT</version>
+            <groupId>io.descoped.secrets</groupId>
+            <artifactId>secrets-provider-dynamic-configuration</artifactId>
+            <version>2.0.0</version>
         </dependency>
 
         <dependency>
-            <groupId>no.ssb.dc</groupId>
+            <groupId>io.descoped.dc</groupId>
             <artifactId>data-collector-connector-content-stream-discarding</artifactId>
-            <version>0.2-SNAPSHOT</version>
+            <version>2.0.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
-            <groupId>no.ssb.dc</groupId>
+            <groupId>io.descoped.dc</groupId>
             <artifactId>data-collector-connector-content-stream-rawdata</artifactId>
-            <version>0.2-SNAPSHOT</version>
+            <version>2.0.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
 
@@ -124,7 +129,6 @@
             <artifactId>simpleclient_common</artifactId>
             <version>0.16.0</version>
         </dependency>
-
 
         <dependency>
             <groupId>io.prometheus</groupId>
@@ -187,16 +191,32 @@
         </dependency>
 
         <dependency>
-            <groupId>no.ssb.dc</groupId>
+            <groupId>io.descoped.dc</groupId>
             <artifactId>data-collector-testutils</artifactId>
-            <version>0.2-SNAPSHOT</version>
+            <version>2.0.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
 
     <profiles>
         <profile>
-            <id>release</id>
+            <id>oss-sonatype</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-release-plugin</artifactId>
+                        <configuration>
+                            <tagNameFormat>@{project.version}</tagNameFormat>
+                            <goals>deploy</goals>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>oss-maven-central</id>
             <build>
                 <plugins>
                     <plugin>
@@ -207,7 +227,7 @@
                             <execution>
                                 <id>attach-sources</id>
                                 <goals>
-                                    <goal>jar</goal>
+                                    <goal>jar-no-fork</goal>
                                 </goals>
                             </execution>
                         </executions>
@@ -216,9 +236,9 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>3.10.0</version>
+                        <version>3.10.1</version>
                         <configuration>
-                            <encoding>UTF-8</encoding>
+                            <encoding>${project.reporting.outputEncoding}</encoding>
                             <additionalOptions>-Xdoclint:none</additionalOptions>
                         </configuration>
                         <executions>
@@ -232,9 +252,34 @@
                     </plugin>
 
                     <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>1.7.0</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <serverId>ossrh</serverId>
+                            <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-release-plugin</artifactId>
+                        <version>3.1.1</version>
+                        <configuration>
+                            <tagNameFormat>@{project.version}</tagNameFormat>
+                            <autoVersionSubmodules>true</autoVersionSubmodules>
+                            <useReleaseProfile>false</useReleaseProfile>
+                            <releaseProfiles>release</releaseProfiles>
+                            <goals>deploy</goals>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>3.2.6</version>
+                        <version>3.2.7</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -242,32 +287,23 @@
                                 <goals>
                                     <goal>sign</goal>
                                 </goals>
-                                <configuration>
-                                    <gpgArguments>
-                                        <arg>--pinentry-mode</arg>
-                                        <arg>loopback</arg>
-                                    </gpgArguments>
-                                </configuration>
                             </execution>
                         </executions>
+                        <configuration>
+                            <gpgArguments>
+                                <arg>--pinentry-mode</arg>
+                                <arg>loopback</arg>
+                            </gpgArguments>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
         </profile>
+
         <profile>
             <id>coverage</id>
-            <properties>
-                <sonar.coverage.jacoco.xmlReportPaths>
-                    ${project.build.outputDirectory}/../site/jacoco/jacoco.xml
-                </sonar.coverage.jacoco.xmlReportPaths>
-            </properties>
             <build>
                 <plugins>
-                    <plugin>
-                        <groupId>org.sonarsource.scanner.maven</groupId>
-                        <artifactId>sonar-maven-plugin</artifactId>
-                        <version>4.0.0.4121</version>
-                    </plugin>
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
@@ -281,53 +317,44 @@
                             </execution>
                             <execution>
                                 <id>report</id>
+                                <phase>prepare-package</phase>
                                 <goals>
                                     <goal>report</goal>
                                 </goals>
                             </execution>
                         </executions>
                     </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>3.5.0</version>
-                        <configuration>
-                            <argLine>
-                                -XX:+EnableDynamicAgentLoading
-                                -Xmx1500m
-                            </argLine>
-                        </configuration>
-                    </plugin>
                 </plugins>
             </build>
         </profile>
 
         <profile>
-            <id>oss-sonatype</id>
+            <id>sonar</id>
+            <properties>
+                <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+                <sonar.organization>descoped</sonar.organization>
+                <sonar.projectKey>descoped_${project.artifactId}</sonar.projectKey>
+                <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
+                <sonar.coverage.exclusions/>
+                <sonar.coverage.jacoco.xmlReportPaths>
+                    target/site/jacoco/jacoco.xml
+                </sonar.coverage.jacoco.xmlReportPaths>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.sonatype.plugins</groupId>
-                        <artifactId>nexus-staging-maven-plugin</artifactId>
-                        <version>1.7.0</version>
-                        <extensions>true</extensions>
-                        <configuration>
-                            <serverId>ossrh</serverId>
-                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                        </configuration>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-release-plugin</artifactId>
-                        <version>3.1.1</version>
-                        <configuration>
-                            <autoVersionSubmodules>true</autoVersionSubmodules>
-                            <useReleaseProfile>false</useReleaseProfile>
-                            <releaseProfiles>release</releaseProfiles>
-                            <goals>deploy</goals>
-                        </configuration>
+                        <groupId>org.sonarsource.scanner.maven</groupId>
+                        <artifactId>sonar-maven-plugin</artifactId>
+                        <version>4.0.0.4121</version>
+                        <executions>
+                            <execution>
+                                <id>sonar</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sonar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
@@ -340,10 +367,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
                     <release>${java.version}</release>
-                    <encoding>${module.build.sourceEncoding}</encoding>
+                    <encoding>${project.build.sourceEncoding}</encoding>
                     <meminitial>64m</meminitial>
                     <maxmem>512m</maxmem>
                 </configuration>
@@ -354,7 +379,7 @@
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>3.3.1</version>
                 <configuration>
-                    <encoding>UTF-8</encoding>
+                    <encoding>${project.reporting.outputEncoding}</encoding>
                 </configuration>
             </plugin>
 
@@ -362,50 +387,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.4.2</version>
-                <configuration>
-                    <archive>
-                        <manifestEntries>
-                            <Premain-Class>no.ssb.dc.core.metrics.MetricsAgent</Premain-Class>
-                            <Can-Redefine-Classes>true</Can-Redefine-Classes>
-                            <Can-Retransform-Classes>true</Can-Retransform-Classes>
-                            <Can-Set-Native-Method-Prefix>true</Can-Set-Native-Method-Prefix>
-                        </manifestEntries>
-                    </archive>
-                </configuration>
-            </plugin>
-
-            <!-- Create a module-info.class file. -->
-            <plugin>
-                <groupId>codes.rafael.modulemaker</groupId>
-                <artifactId>modulemaker-maven-plugin</artifactId>
-                <version>1.11</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.ow2.asm</groupId>
-                        <artifactId>asm</artifactId>
-                        <version>9.7</version>
-                    </dependency>
-                </dependencies>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>inject-module</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <name>net.bytebuddy.agent</name>
-                    <multirelease>true</multirelease>
-                    <packages>net.bytebuddy.agent</packages>
-                    <exports>net.bytebuddy.agent</exports>
-                    <requires>java.instrument</requires>
-                    <static-requires>
-                        jdk.attach,
-                        com.sun.jna,
-                        com.sun.jna.platform
-                    </static-requires>
-                </configuration>
             </plugin>
 
             <plugin>
@@ -422,34 +403,19 @@
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>3.1.1</version>
-                <configuration>
-                    <tagNameFormat>@{project.version}</tagNameFormat>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
                 <version>3.5.0</version>
-                <executions>
-                    <execution>
-                        <id>enforce-maven</id>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <requireMavenVersion>
-                                    <version>[3.6.3,4)</version>
-                                </requireMavenVersion>
-                            </rules>
-                        </configuration>
-                    </execution>
-                </executions>
+                <configuration>
+                    <rules>
+                        <requireJavaVersion>
+                            <version>${java.version}</version>
+                        </requireJavaVersion>
+                        <requireMavenVersion>
+                            <version>[3.6.3,4)</version>
+                        </requireMavenVersion>
+                    </rules>
+                </configuration>
             </plugin>
         </plugins>
     </build>
-
 </project>
